# SpeedyBeeF405V3_old

./: CMakeLists.txt  SpeedyBeeF405V3.code-workspace
SpeedyBeeF405V3_CUBE/: .cproject  .mxproject  .project  SpeedyBeeF405V3_CUBE Debug.launch  SpeedyBeeF405V3_CUBE.ioc  mx.scratch
SpeedyBeeF405V3_CUBE/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
SpeedyBeeF405V3_CUBE/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
SpeedyBeeF405V3_CUBE/Debug/: SpeedyBeeF405V3_CUBE.elf  SpeedyBeeF405V3_CUBE.list  SpeedyBeeF405V3_CUBE.map
SpeedyBeeF405V3_CUBE/Debug/Core/Src/: main.su  spi.su  stm32f4xx_it.su  subdir.mk
SpeedyBeeF405V3_CUBE/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
SpeedyBeeF405V3_CUBE/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk
SpeedyBeeF405V3_CUBE/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk
SpeedyBeeF405V3_CUBE/Debug/USB_DEVICE/App/: subdir.mk
datasheet/: SPBE-SPEEDYBEEF405V3.config
src/Core/Src/: gpio.c  main.c
src/ap/: ap.c
src/bsp/: bsp.c  bsp.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
src/bsp/ldscript/: STM32F405RGTX_FLASH.ld
src/bsp/startup/: startup_stm32f405rgtx.s
src/common/: def.h
src/common/config/: config.c  config.h  config_eeprom.c  config_eeprom.h  config_streamer.c
src/common/core/: barometer.c  barometer.h  barometer_dps310.c  barometer_dps310.h  bmi270.c  bmi270.h  compass.c  compass.h  core.c  core.h  dyn_notch_filter.c  gyro_filter_impl.c  pg.c  pg.h  pid.c  pid.h  pid_init.c  pid_init.h  runtime_config.c  sdft.c  sensor.c  sensor.h  sensors.c  sensors.h  telemetry.c
src/common/core/rx/: crsf.c  rx.c  rx.h  sbus.c  sbus.h  sbus_channels.c
src/common/core/scheduler/: scheduler.c  scheduler.h  tasks.c
src/common/core/sensors/: acceleration.c  acceleration.h  acceleration_init.c  acceleration_init.h  compass.c  compass.h  gyro.c  gyro.h  gyro_init.c  gyro_init.h
src/common/hw/include/: adc.h  adc_impl.h  spi.h  uart.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: adc.c  cli.c  fatfs.c  gpio.c  i2c.c  led.c  sd.c  spi.c  uart.c
src/hw/driver/accgyro/: bmi270.c  bmi270.h
src/hw/driver/compass/: compass_qmc5883l.c
src/hw/driver/gps/: gps.c  gps.h
src/hw/driver/sdcard/: sdcard.c  sdcard.h  sdcard_impl.h  sdcard_spi.c  sdcard_standard.c  sdcard_standard.h  user_diskio.h
src/lib/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
